<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_bag">My Items</string>
    
    <!-- activity_main -->
    <string name="add_a_bag">Add an item</string>
    <string name="button_add_bags">Add Items</string>
    <string name="button_associate">Associate Beacon</string>
    <string name="app_name">Luggage Tracker</string>
    <string name="item_list">Item List</string>
    <string name="no_items">You don\'t have any item :(\nPlease add one using the + button</string>
    <string name="show_map">Show Map</string>
    
    <!-- activity_luguagge -->
    <string name="title_activity_luguagge">Luggage Status</string>
    
    <!-- activity_bag_details -->
    <string name="my_map">Lost items</string>
    <string name="title_activity_bag_details">Bag Details</string>
    <string name="text_view_bag_name">Item Name</string>
    <string name="text_view_description">Description</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="hint_bag_name">Name..</string>
    <string name="hint_description">Description..</string>
    <string name="bag_image_description">Your item image</string>
    <string name="my_bags">My items</string>

    <!-- menu -->
    <string name="add_item">Add item</string>
    <string name="show_beacon">Show Distance</string>
   
     
     <!-- bag detail menu -->
     <string name="edit">Edit Details</string>
     <string name="delete">Delete Bag</string>
     <string name="cancel">Cancel</string>
     
    <!-- Tab -->
    <string name = "title_section1">TRACKING ITEMS</string>
    <string name = "title_section2">BEACONS PROXIMITY</string>
    
    <!-- test -->
    <string name = "local_service_started">service start</string>
    <string name = "local_service_stopped">service stop</string>
    <string name = "local_service_label">Background Service</string>
    
    <!-- BlueTooth -->
    <string name="ble_not_supported">Device does not have Bluetooth Low Energy.</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="error_bluetooth_not_enabled">Bluetooth not enabled.</string>
    
</resources>
