<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".AddItem" >
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#2980b9"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="Helvetica Light"
            android:gravity="center"
            android:text="@string/add_a_bag"
            android:textColorHint="#ffffff"
            android:textColorLink="#ffffff"
            android:textColor="#ffffff"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/btnCapture"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/bag_image_description"
            android:src="@drawable/apn"
            android:layout_gravity="center"
             />
    
    </LinearLayout>
    

        <com.example.flatui.views.FlatTextView
            android:id="@+id/textViewBagName"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="Helvetica Light"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/text_view_bag_name"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextBagName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape"
            android:ems="15"
            android:hint="@string/hint_bag_name"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:textSize="20sp" />

        <com.example.flatui.views.FlatTextView
            android:id="@+id/textViewDescription"
            android:text="@string/text_view_description"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:fontFamily="Helvetica Light"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="25sp"
           	 />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape"
            android:ems="20"
            android:hint="@string/hint_description"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/associatebtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="29dp"
            android:background="#f1c40f"
            android:fontFamily="Helvetica Light"
            android:text="@string/button_associate"
            android:textColorHint="#ffffff"
            android:textColorLink="#ffffff"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1" />
    
 
    
    <LinearLayout
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="bottom">

    <Button
        android:id="@+id/delete"
        style="@style/btnStyleShakespeare"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:background="#e74c3c"
        android:fontFamily="Helvetica Light"
        android:shadowRadius="0"
        android:text="@string/button_cancel"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="normal" />
    
     <Button
         android:id="@+id/save"
         style="@style/btnStyleShakespeare"
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:layout_weight="1"
         android:background="#7f8c8d"
         android:fontFamily="Helvetica Light"
         android:shadowRadius="0"
         android:text="@string/button_save"
         android:textColor="#ffffff"
         android:textSize="20sp"
         android:textStyle="normal" />
    
    </LinearLayout>
    

</LinearLayout>